--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
     spring.jpa.hibernate.ddl-auto=update
+    spring.jpa.show-sql = true
     spring.datasource.url=jdbc:mysql://localhost:3306/grupo23-bd-oo2-2022
     spring.datasource.username=root
     spring.datasource.password=root
